fix: add fallback modules for waybar

--- a/modules/home/desktop/void/mechabar/styles/modules-center.css
+++ b/modules/home/desktop/void/mechabar/styles/modules-center.css
@@ -16,7 +16,7 @@
 #custom-left_div.2 {
 	color: @temperature;
 }
-#temperature {
+#temperature, #custom-temperature_fallback {
 	background-color: @temperature;
 }
 
