--- a/modules/home/desktop/void/mechabar/styles/modules-right.css
+++ b/modules/home/desktop/void/mechabar/styles/modules-right.css
@@ -26,7 +26,7 @@
 	background-color: @volume;
 	color: @backlight;
 }
-#backlight {
+#backlight, #custom-backlight_fallback {
 	background-color: @backlight;
 }
 
